# OS

./: README.md
ryos/: .gitignore  Cargo.toml
ryos/.cargo/: config.toml
ryos/kernel/: Cargo.toml
ryos/kernel/src/: main.rs
ryos/kernel/src/file_system/: disk_driver.rs  errors.rs  fat16.rs  mod.rs
ryos/kernel/src/heap_alloc/: alloc.rs
ryos/kernel/src/interrupts/: gdt.rs  interrupts.rs  mod.rs
ryos/kernel/src/memory/: paging.rs
ryos/kernel/src/multitasking/: round_robin.rs
ryos/kernel/src/terminal/: interface.rs  mod.rs
ryos/kernel/src/terminal/input/: buffer.rs
ryos/kernel/src/terminal/output/: framebuffer.rs  mod.rs  my_log.rs  print_macros.rs
