[package]
name = "ryos"
version = "0.1.0"
edition = "2024"
default-run = "ryos"
[workspace]
members = ["kernel"]

[dependencies]
# run with uefi without donwload any files
ovmf-prebuilt = "0.1.0-alpha"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"
