[package]
name = "kernel"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
# for the bootloader
bootloader_api = "0.11.2"
x86_64 = "0.15.1"

# console imports
embedded-graphics = "0.8.1"
log = { version = "0.4.17", default-features = false }
bootloader-x86_64-common = "0.11.3"
conquer-once = { version = "0.4.0", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]